--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
-
+//apply plugin: 'io.objectbox'
+apply plugin: 'org.greenrobot.greendao'
 android {
 
 
@@ -24,14 +25,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation rootProject.ext.dependencies["appcompat-v7"]
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
-
-
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation project(path: ':okgo_extends')
+    implementation project(path: ':lib_base')
+
+    implementation rootProject.ext.dependencies["butterknife"]
+    annotationProcessor rootProject.ext.dependencies["butterknife-annotationProcessor"]
+    implementation 'org.greenrobot:greendao:3.2.2'
 }
